Fix thread list in Conpherence when scrollbar is present
Summary: This label is too wide when a !!wild scrollbar appears!!

Test Plan: shrink height of tall thread list in Conpherence, see no wrapping.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D16536

--- a/webroot/rsrc/css/application/conpherence/menu.css
+++ b/webroot/rsrc/css/application/conpherence/menu.css
@@ -174,7 +174,7 @@
   color: {$darkbluetext};
   text-shadow: 0px 1px 1px #fff;
   overflow: hidden;
-  width: 175px;
+  width: 165px;
   text-overflow: ellipsis;
 }
 
